2001-09-12  Per Bothner  <per@bothner.com>

	* Type.java (neverReturnsType):  Use different constructor, to
	avoid it being registered in place of void_type.

2001-08-23  Per Bothner  <per@bothner.com>

	* Access.java (SUPER):  New constant.

	* CodeAttr.java (emitInvoke):  Was testing isInterface on wrong class.

	* CodeAttr.java (emitElse):  Fix bug (null pointer access)
	reported by Felix S Klock II <pnkfelix@MIT.EDU>.

	* Type.java (signatureToPrimitive):  Change return type.

	* Type.java (getImplementationType):  New method.

2001-08-15  Per Bothner  <per@bothner.com>

	* ClassType.java (getSuperclass):  Don't call getReflectClass of
	this is an interface or is Object.

	* ClassType.java (setInterface):  New method.

	* ClassType.java (getMethods(Filter,int)):  New method overloads.
	(countMethods):  New method.
	
	* Method.java (isAbstract):  New method.

2001-08-07  Brian Jones <cbj@gnu.org>

	* LineNumbersAttr.java (getLineCount, getLineNumberTable): New methods.

2001-07-16  Per Bothner  <per@bothner.com>

	* PrimType.java (booleanValue):  Make static.

	* Scope.java (find_var):  Renamed to ...
	(getvariable): ... new name.
	* CodeAttr.java (getArg):  Update accordingly.
	(getCurrentScope):  New method.

	* CodeAttr.java (getCurrentScope):  New method.

2001-04-23  Per Bothner  <per@bothner.com>

	* CodeFragment.java (linenumbers):  New field.
	(emit):  Also emit linenumbers.
	* CodeAttr.java (endFragment):  Save linenumbers in fragment.

2001-04-07  Thomas Kirk  <tk@research.att.com>

	* ZipLoader.java (loadAllClasses):  New method to force load
	of all classes from the zip archive, close archive.
	(close):  New Method to prevent leaking open ZipFiles when 
	archive is not completely read.
	(loadClass):  Reopen the zip file if it has been closed prematurely.

	* ZipLoader.java (zipname):  New field to hold name of zipfile
	in case it must be reopened.

2001-03-29  Per Bothner  <per@bothner.com>
